# IoT-hub-backend

./: .dockerignore  .gitignore  README.md  pyproject.toml
accounts/: admin.py  models.py  tasks.py
accounts/ap1/v1/: serializers.py  urls.py  views.py
accounts/ap1/v1/openapi/: authentication_schemas.py  session_schemas.py
accounts/migrations/: 0001_initial.py  0002_add_user_session.py
core/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  development.py  production.py
devices/: admin.py  models.py  permissions.py  redis_acl.py
devices/api/v1/: serializers.py  urls.py  views.py
devices/api/v1/openapi/: device_schemas.py
devices/management/commands/: cache_device_acls.py
devices/migrations/: 0001_initial.py  0002_device_topics_alter_device_password.py
docker/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh
docker/compose/: .env.prod  .env.prod.example  EMQX_SETUP.md  docker-compose.dev.yml  docker-compose.prod.yml
docker/nginx/: nginx.conf
scripts/: test_auth.py  test_auth_docker.py  test_device_auth_mqtt.py  test_mqtt_auth.py  test_mqtt_connection.py  test_sessions.py
utils/: device_info.py  sms.py
