[project]
name = "iot-hub-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "celery-types>=0.26.0",
    "django>=6.0.6",
    "django-celery-results>=2.6.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "paho-mqtt>=2.1.0",
    "psycopg2-binary>=2.9.12",
    "redis>=8.0.1",
    "requests>=2.32.0",
]
